fix scroll handle flickering in FF on macOS -> #473

--- a/src/main/components/table/UITable.scss
+++ b/src/main/components/table/UITable.scss
@@ -298,6 +298,10 @@
         display: none;
     }
 
+    .p-virtualscroller {
+        contain: size layout paint;
+    }
+    
     .p-virtualscroller-content {
         contain: unset;
     }
